--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,10 @@ h2 {
   margin-bottom: 0;
 }
 
+h2::first-letter {
+  text-transform: capitalize;
+}
+
 .weather-app-wrapper {
   max-width: 600px;
   margin: 30px auto;
@@ -30,7 +34,7 @@ h2 {
   margin: 0;
 }
 
-.temperature .temp {
+#temp {
   font-size: 55px;
   position: relative;
   top: 16px;
